Product images manage & initial backend web api

--- a/BackendApi/BackendApi.csproj
+++ b/BackendApi/BackendApi.csproj
@@ -1,21 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Catalog\Categories\" />
-  </ItemGroup>
-
-  <ItemGroup>
-	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\idea102Core.Application\idea102Core.Application.csproj" />
     <ProjectReference Include="..\idea102Core.Data\idea102Core.Data.csproj" />
     <ProjectReference Include="..\idea102Core.Utilities\idea102Core.Utilities.csproj" />
     <ProjectReference Include="..\idea102Core.ViewModels\idea102Core.ViewModels.csproj" />
   </ItemGroup>
+
 
 </Project>
