--- a/idea102Core.BackendApi/appsettings.Development.json
+++ b/idea102Core.BackendApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "idea102CoreSolutionDb": "Server=SKYNET\\SQLEXPRESS;Database=idea102CoreSolution;Trusted_Connection=True;"
+    "idea102CoreSolutionDb": "Server=SKYNET\\SQLEXPRESS;Database=idea102CoreSolution;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
