--- a/idea102Core.BackendApi/idea102Core.BackendApi.csproj
+++ b/idea102Core.BackendApi/idea102Core.BackendApi.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\idea102Core.Application\idea102Core.Application.csproj" />
     <ProjectReference Include="..\idea102Core.Data\idea102Core.Data.csproj" />
     <ProjectReference Include="..\idea102Core.Utilities\idea102Core.Utilities.csproj" />
