--- a/idea102Core.Data/appsettings.json
+++ b/idea102Core.Data/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "idea102CoreSolutionDb": "Server=SKYNET\\SQLEXPRESS;Database=idea102CoreSolution;Trusted_Connection=True;"
+    "idea102CoreSolutionDb": "Server=SKYNET\\SQLEXPRESS;Database=idea102CoreSolution;Trusted_Connection=True;MultipleActiveResultSets=true",
   }
 }
