--- a/idea102Core.Data/idea102Core.Data.csproj
+++ b/idea102Core.Data/idea102Core.Data.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\idea102Core.Utilities\idea102Core.Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
